# kube

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  FINAL_OPTIMIZATIONS.md  FIXES_COMPLETED.md  IMPROVEMENTS.md  LATEST_OPTIMIZATIONS.md  Makefile  OPTIMIZATIONS_COMPLETED.md  OPTIMIZATIONS_FINAL_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  README_REFRESH_AND_MOUSE_MODE.md  TUI_REDESIGN.md  USAGE.md  build.sh  test_kubectl.sh
.github/workflows/: release.yml
.qoder/rules/: commit.mdc
docs/: README.md  RESTRUCTURE_SUMMARY.md  claude-code-migration-guide.md  claude-code-migration-guide.sh
docs/fixes/: ARCHIVE_LOG.md  EXEC_FIX.md  FINAL_OPTIMIZATIONS.md  FIXES_COMPLETED.md  IMPROVEMENTS.md  LATEST_OPTIMIZATIONS.md  OPTIMIZATIONS_COMPLETED.md  OPTIMIZATIONS_FINAL_SUMMARY.md  README.md  README_REFRESH.md  TIMELINE.md
docs/guides/: DUAL_MODE_GUIDE.md  MINIKUBE_SUPPORT.md  OPTIMIZATIONS_GUIDE.md  README.md
docs/superpowers/plans/: 2026-04-25-kube-tui-optimization-plan.md  2026-05-02-tui-ux-enhancement-plan.md
docs/superpowers/specs/: 2026-04-25-kube-tui-optimization-design.md  2026-05-02-tui-ux-enhancement-design.md
scripts/: README.md  debug_mouse.sh  regression-test.sh  test_conditional_mouse_capture.sh  test_dual_mode_switching.sh  test_minikube_support.sh  test_mouse.sh  test_mouse_selection.sh  test_optimizations.sh
src/: CLAUDE.md  app.rs  app.rs.bak  events.rs  main.rs
src/app/: config.rs  data_loader.rs  key_handler.rs  mod.rs  state.rs
src/app/handlers/: batch.rs  detail_mode.rs  list_mode.rs  logs_mode.rs  mod.rs
src/kubectl/: CLAUDE.md  client.rs  commands.rs  mod.rs  types.rs
src/ui/: CLAUDE.md  layout.rs  mod.rs
src/ui/components/: cluster_role_binding_list.rs  cluster_role_list.rs  configmap_list.rs  confirm.rs  daemonset_list.rs  deployment_list.rs  describe.rs  help.rs  ingress_list.rs  job_list.rs  logs.rs  mod.rs  more_resources.rs  namespace_list.rs  network_policy_list.rs  node_list.rs  pod_list.rs  pv_list.rs  pvc_list.rs  role_binding_list.rs  role_list.rs  search.rs  secret_list.rs  service_account_list.rs  (+4 more)
tests/app/: state_test.rs
