[package]
name = "kube-tui"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A TUI tool for Kubernetes management inspired by lazydocker"
license = "MIT"

[dependencies]
ratatui = "0.24"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1

