[package]
name = "kube-tui"
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
authors = ["Your Name <your.email@example.com>"]
description = "A TUI tool for Kubernetes management inspired by lazydocker"
license = "MIT"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6"

[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
